wip: working on create environment to run app

--- a/sistema-matriculas/Dockerfile
+++ b/sistema-matriculas/Dockerfile
@@ -4,24 +4,27 @@ FROM openjdk:17-jdk-slim
 ENV ZK_VERSION=3.9.3
 ENV ZK_HOME=/opt/zookeeper
 
-# Install dependencies and download ZooKeeper
-RUN apt-get update && apt-get install -y curl tar bash \
-    && curl -sSL https://dlcdn.apache.org/zookeeper/zookeeper-${ZK_VERSION}/apache-zookeeper-${ZK_VERSION}-bin.tar.gz \
+# Install dependencies, Maven, and download ZooKeeper
+RUN apt-get update && apt-get install -y \
+    curl \
+    tar \
+    bash \
+    maven \
+ && curl -sSL https://dlcdn.apache.org/zookeeper/zookeeper-${ZK_VERSION}/apache-zookeeper-${ZK_VERSION}-bin.tar.gz \
     | tar -xz -C /opt \
-    && mv /opt/apache-zookeeper-${ZK_VERSION}-bin ${ZK_HOME} \
-    && rm -rf /var/lib/apt/lists/*
+ && mv /opt/apache-zookeeper-${ZK_VERSION}-bin ${ZK_HOME} \
+ && rm -rf /var/lib/apt/lists/*
 
-# Copy your Java code and scripts
+# Set working directory
 WORKDIR /app
-COPY Executor.java .
-COPY lista.sh .
-COPY logback.xml ${ZK_HOME}/conf/logback.xml
 
-# Compile Java code
-RUN javac -cp ".:${ZK_HOME}/lib/*" Executor.java
+# Copy source code and config
+COPY . .
+COPY logback.xml ${ZK_HOME}/conf/logback.xml
 
 # Set CLASSPATH for ZooKeeper jars
 ENV CP=.:${ZK_HOME}/lib/zookeeper-${ZK_VERSION}.jar:${ZK_HOME}/lib/zookeeper-jute-${ZK_VERSION}.jar:${ZK_HOME}/lib/slf4j-api-1.7.30.jar:${ZK_HOME}/lib/logback-core-1.2.13.jar:${ZK_HOME}/lib/logback-classic-1.2.13.jar:${ZK_HOME}/lib/netty-handler-4.1.113.Final.jar
 
-# Run the program (adjust host/paths as needed)
-CMD ["sh", "-c", "java -cp $CP -Dlogback.configurationFile=file:${ZK_HOME}/conf/logback.xml Executor 127.0.0.1 /mcta025/ex4 out.txt ./lista.sh"]
+# Default command (infinite sleep for debugging)
+ENTRYPOINT ["sh", "build_and_run.sh"]
+CMD ["sleep", "infinity"]
