wip: working on start zkServer

--- a/sistema-matriculas/Dockerfile
+++ b/sistema-matriculas/Dockerfile
@@ -18,6 +18,7 @@ RUN apt-get update && apt-get install -y \
 
 RUN ln -sf /bin/bash /bin/sh
 
+RUN mv ${ZK_HOME}/conf/zoo_sample.cfg ${ZK_HOME}/conf/zoo.cfg
 
 # Set working directory
 WORKDIR /app
@@ -29,6 +30,6 @@ COPY logback.xml ${ZK_HOME}/conf/logback.xml
 # Set CLASSPATH for ZooKeeper jars
 ENV CP=.:${ZK_HOME}/lib/zookeeper-${ZK_VERSION}.jar:${ZK_HOME}/lib/zookeeper-jute-${ZK_VERSION}.jar:${ZK_HOME}/lib/slf4j-api-1.7.30.jar:${ZK_HOME}/lib/logback-core-1.2.13.jar:${ZK_HOME}/lib/logback-classic-1.2.13.jar:${ZK_HOME}/lib/netty-handler-4.1.113.Final.jar
 
+CMD [ "sh", "-c", "sleep", "infinity"]
 # Default command (infinite sleep for debugging)
 ENTRYPOINT ["sh", "build_and_run.sh"]
-CMD ["sleep", "infinity"]
