--- a/sistema-matriculas/docker-compose.yml
+++ b/sistema-matriculas/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     environment:
       ZOO_MY_ID: 1
       ZOO_SERVERS: server.1=172.28.0.11:2888:3888 server.2=172.28.0.12:2888:3888 server.3=172.28.0.13:2888:3888
-    command: [ "sh", "-c", "sleep infinity" ]
+    command: ["sh", "-c", "./build_and_run.sh && sleep infinity"]
 
   zookeeper2:
     build:
@@ -45,7 +45,7 @@ services:
     environment:
       ZOO_MY_ID: 2
       ZOO_SERVERS: server.1=172.28.0.11:2888:3888 server.2=172.28.0.12:2888:3888 server.3=172.28.0.13:2888:3888
-    command: [ "sh", "-c", "sleep infinity" ]
+    command: ["sh", "-c", "./build_and_run.sh && sleep infinity"]
 
   zookeeper3:
     build:
@@ -64,5 +64,4 @@ services:
     environment:
       ZOO_MY_ID: 3
       ZOO_SERVERS: server.1=172.28.0.11:2888:3888 server.2=172.28.0.12:2888:3888 server.3=172.28.0.13:2888:3888
-    command: [ "sh", "-c", "sleep infinity" ]
-  
+    command: ["sh", "-c", "./build_and_run.sh && sleep infinity"]
