--- a/sistema-matriculas/docker-compose.yml
+++ b/sistema-matriculas/docker-compose.yml
@@ -65,3 +65,23 @@ services:
       ZOO_MY_ID: 3
       ZOO_SERVERS: server.1=172.28.0.11:2888:3888 server.2=172.28.0.12:2888:3888 server.3=172.28.0.13:2888:3888
     command: ["sh", "-c", "./build_and_run.sh && sleep infinity"]
+
+  zkcli:
+    build:
+      context: .
+    working_dir: /opt/zookeeper/bin
+    container_name: zkcli-test
+    networks:
+      zknet:
+        ipv4_address: 172.28.0.14
+    ports:
+      - "2184:2181"
+      - "2891:2888"
+      - "3891:3888"
+      - "8085:8090"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    environment:
+      ZOO_MY_ID: 3
+      ZOO_SERVERS: server.1=172.28.0.11:2888:3888 server.2=172.28.0.12:2888:3888 server.3=172.28.0.13:2888:3888
+    command: [ "sh", "-c", "sleep infinity" ]
