--- a/sistema-matriculas/docker-compose.yml
+++ b/sistema-matriculas/docker-compose.yml
@@ -5,7 +5,7 @@ networks:
     driver: bridge
     ipam:
       config:
-        - subnet: 172.28.0.0/16   # 👈 custom subnet for static IPs
+        - subnet: 172.28.0.0/16
 
 services:
   zookeeper1:
@@ -45,6 +45,8 @@ services:
     environment:
       ZOO_MY_ID: 2
       ZOO_SERVERS: server.1=172.28.0.11:2888:3888 server.2=172.28.0.12:2888:3888 server.3=172.28.0.13:2888:3888
+      JAVA_TOOL_OPTIONS: -agentlib:jdwp=transport=dt_socket,address=host.docker.internal:8012,server=n,suspend=n
+
     command: ["sh", "-c", "./build_and_run.sh && sleep infinity"]
 
   zookeeper3:
@@ -64,6 +66,7 @@ services:
     environment:
       ZOO_MY_ID: 3
       ZOO_SERVERS: server.1=172.28.0.11:2888:3888 server.2=172.28.0.12:2888:3888 server.3=172.28.0.13:2888:3888
+      JAVA_TOOL_OPTIONS: -agentlib:jdwp=transport=dt_socket,address=host.docker.internal:8012,server=n,suspend=n
     command: ["sh", "-c", "./build_and_run.sh && sleep infinity"]
 
   zkcli:
