--- a/sistema-matriculas/docker-compose.yml
+++ b/sistema-matriculas/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - "host.docker.internal:host-gateway"
     environment:
       ZOO_MY_ID: 1
-      ZOO_SERVERS: server.1=172.28.0.11:2888:3888 server.2=172.28.0.12:2888:3888 server.3=172.28.0.13:2888:3888 server.4=172.28.0.15
+      ZOO_SERVERS: server.1=172.28.0.11:2888:3888 server.2=172.28.0.12:2888:3888 server.3=172.28.0.13:2888:3888
     command: ["sh", "-c", "./build_and_run.sh && sleep infinity"]
 
   zookeeper2:
@@ -44,7 +44,7 @@ services:
       - "host.docker.internal:host-gateway"
     environment:
       ZOO_MY_ID: 2
-      ZOO_SERVERS: server.1=172.28.0.11:2888:3888 server.2=172.28.0.12:2888:3888 server.3=172.28.0.13:2888:3888 server.4=172.28.0.15
+      ZOO_SERVERS: server.1=172.28.0.11:2888:3888 server.2=172.28.0.12:2888:3888 server.3=172.28.0.13:2888:3888
     command: ["sh", "-c", "./build_and_run.sh && sleep infinity"]
 
   zookeeper3:
@@ -63,31 +63,11 @@ services:
       - "host.docker.internal:host-gateway"
     environment:
       ZOO_MY_ID: 3
-      ZOO_SERVERS: server.1=172.28.0.11:2888:3888 server.2=172.28.0.12:2888:3888 server.3=172.28.0.13:2888:3888 server.4=172.28.0.15
+      ZOO_SERVERS: server.1=172.28.0.11:2888:3888 server.2=172.28.0.12:2888:3888 server.3=172.28.0.13:2888:3888
 
     ## remove start app to test barrier feature
     command: ["sh", "-c", "./build_and_run.sh && sleep infinity"]
 
-  zookeeper4:
-      build:
-        context: .
-      container_name: zookeeper4
-      networks:
-        zknet:
-          ipv4_address: 172.28.0.15
-      ports:
-        - "2184:2181"
-        - "2891:2888"
-        - "3891:3888"
-        - "8084:8090"
-      extra_hosts:
-        - "host.docker.internal:host-gateway"
-      environment:
-        ZOO_MY_ID: 3
-        ZOO_SERVERS: server.1=172.28.0.11:2888:3888 server.2=172.28.0.12:2888:3888 server.3=172.28.0.13:2888:3888 server.4=172.28.0.15
-
-      ## remove start app to test barrier feature
-      command: [ "sh", "-c", "./build_and_run.sh && sleep infinity" ]
 
   zk-cli:
     build:
@@ -106,7 +86,7 @@ services:
       - "host.docker.internal:host-gateway"
     environment:
       ZOO_MY_ID: 3
-      ZOO_SERVERS: server.1=172.28.0.11:2888:3888 server.2=172.28.0.12:2888:3888 server.3=172.28.0.13:2888:3888 server.4=172.28.0.15
+      ZOO_SERVERS: server.1=172.28.0.11:2888:3888 server.2=172.28.0.12:2888:3888 server.3=172.28.0.13:2888:3888
 
     ## removing start app to test barrier feature
     command: ["sh", "-c", "sleep infinity"]
